add slash to the meta tag

--- a/MySite/login.html
+++ b/MySite/login.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta title="Login page"/>
-	<meta description="Shura's login page">
+	<meta description="Shura's login page"/>
 </head>	
 
 <body>
