--- a/MySite/SignUp.html
+++ b/MySite/SignUp.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login page</title>
-    <meta name="description" content="login page for Shura's first site"/>
+    <title>Registration page</title>
+    <meta name="description" content="Sign up page for Shura's first site"/>
     <meta name="keywords" content="Shura, web-development, php, javaScript, html5, css3"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -12,14 +12,17 @@
 
 <body>
     <div class="container">
-        <h1>Authentication</h1>
-        <form name="login" method="post" action="index.php">
+        <h1>Registration</h1>
+        <form name="signUp" method="POST" action="SignUp.php">
             <ul style="list-style-type: none; padding: 0;">
-            <li><label for="userName">Username:</label></li>
-            <li><input id="userName" type="text" name="userName" width="25" size="25" placeholder="Please input your username"></li>
+            <li><label for="username">Username:</label></li>
+            <li><input id="username" type="text" name="username" width="25" size="25" placeholder="Please input your username"></li>
             <li><label for="password">Password:</label></li>
             <li><input id="password" type="password" name="password" width="25" size="25" placeholder="Please input your password"></li>
+            <li><label for="email">E-mail:</label></li>
+            <li><input id="email" type="text" name="email" width="45" size="45" placeholder="Please input your e-mail"></li>
             <li style="padding-top: 5px;"><button class="btn btn-success" type="submit" name="submit" value="submit"><i class="fa fa-save"></i> Submit</button></li>
+            <li><a href="SignIn.html">I've already had an account</a></li>
             </ul>
         </form>
     </div>
