Comleted autoload file, namespaces and started work on the log in page

--- a/MySite/Authorization/SignIn.html
+++ b/MySite/Authorization/SignIn.html
@@ -15,10 +15,10 @@
         <h1>Authentication</h1>
         <form name="signIn" method="post" action="SignIn.php">
             <ul style="list-style-type: none; padding: 0;">
-            <li><label for="username">Username:</label></li>
-            <li><input id="username" type="text" name="username" width="25" size="25" placeholder="Please input your username"></li>
-            <li><label for="password">Password:</label></li>
-            <li><input id="password" type="password" name="password" width="25" size="25" placeholder="Please input your password"></li>
+            <li><label for="usernameLogin">Username:</label></li>
+            <li><input id="usernameLogin" type="text" name="usernameLogin" width="25" size="25" placeholder="Please input your username"></li>
+            <li><label for="passwordLogin">Password:</label></li>
+            <li><input id="passwordLogin" type="password" name="passwordLogin" width="25" size="25" placeholder="Please input your password"></li>
             <li style="padding-top: 5px;"><button class="btn btn-success" type="submit" name="submit" value="submit"><i class="fa fa-save"></i> Submit</button></li>
             <li><a href="SignUp.html">Create new account</a></li>
             </ul>
