--- a/MySite/Authorization/account.html
+++ b/MySite/Authorization/account.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h2>Personal information</h2>
-        <form name="accountForm" id="accountForm" method="post" action="account.php">
+        <form name="accountForm" id="accountForm" method="post" action="Account.php">
             <fieldset>
             <legend>Personal data</legend>
             <p><label for="firstName">First name*:</label></p>
