--- a/MySite/Authorization/signup.html
+++ b/MySite/Authorization/signup.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="validation.js"></script>
+    <script src=""></script>
     </head>
 
 <body>
     <div class="container">
         <h1>Registration</h1>
-        <form name="signUp" method="POST" action="SignUp.php">
+        <form name="signUp" method="POST" action="signup.php">
             <ul style="list-style-type: none; padding: 0;">
             <li><label for="username">Username:</label></li>
             <li><input id="username" type="text" name="username" width="25" size="25" placeholder="Please input your username"></li>
@@ -22,7 +22,7 @@
             <li><label for="email">E-mail:</label></li>
             <li><input id="email" type="text" name="email" width="45" size="45" placeholder="Please input your e-mail"></li>
             <li style="padding-top: 5px;"><button class="btn btn-success" type="submit" name="submit" value="submit"><i class="fa fa-save"></i> Submit</button></li>
-            <li><a href="SignIn.html">I've already had an account</a></li>
+            <li><a href="signin.html">I've already had an account</a></li>
             </ul>
         </form>
     </div>
