--- a/Prog/FRONT-END Start/Lesson_4/index.html
+++ b/Prog/FRONT-END Start/Lesson_4/index.html
@@ -12,13 +12,13 @@
 		<div class="container">
 			<nav class="header_nav">
 				<div>
-					<a class="header_nav__link" href="###">link</a>
+					<a class="header_nav__link" href="">link</a>
 				</div>
 				<div>
-					<a class="header_nav__link" href="###">link</a>
+					<a class="header_nav__link" href="">link</a>
 				</div>
 				<div>
-					<a class="header_nav__link" href="###">link</a>
+					<a class="header_nav__link" href="">link</a>
 				</div>
 			</nav>
 		</div>
@@ -32,6 +32,13 @@
 					Lorem ipsum dolor sit amet, consectetur.
 				</p>
 			</div>
+		</div>
+	</section>
+	<section class="main_block">
+		<h2 class="main_block__header">Some records</h2>
+		<div class="main_block__content">
+			<img src="img/bg.jpg" alt="workspace">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 		</div>
 	</section>
 
