--- a/Prog/FRONT-END Start/Lesson_4/index.html
+++ b/Prog/FRONT-END Start/Lesson_4/index.html
@@ -35,10 +35,20 @@
 		</div>
 	</section>
 	<section class="main_block">
-		<h2 class="main_block__header">Some records</h2>
-		<div class="main_block__content">
-			<img src="img/bg.jpg" alt="workspace">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		<div class="container">
+			<h2 class="main_block__header">Some records</h2>
+			<div class="main_block__content">
+				<img src="img/bg.jpg" alt="workspace">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Perferendis totam ab, nostrum, rerum quas velit, deserunt sunt dicta inventore neque, reiciendis? Dignissimos adipisci delectus quidem quia numquam cum neque impedit.</p>
+			</div>
+			<div class="main_block__content">
+				<img src="img/bg.jpg" alt="workspace">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Perferendis totam ab, nostrum, rerum quas velit, deserunt sunt dicta inventore neque, reiciendis? Dignissimos adipisci delectus quidem quia numquam cum neque impedit.</p>
+			</div>	
+			<div class="main_block__content">
+				<img src="img/bg.jpg" alt="workspace">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Perferendis totam ab, nostrum, rerum quas velit, deserunt sunt dicta inventore neque, reiciendis? Dignissimos adipisci delectus quidem quia numquam cum neque impedit.</p>
+			</div>		
 		</div>
 	</section>
 
