Completed homework lesson 4

--- a/Prog/FRONT-END Start/Lesson_4/index.html
+++ b/Prog/FRONT-END Start/Lesson_4/index.html
@@ -36,19 +36,19 @@
 	</section>
 	<section class="main_block">
 		<div class="container">
-			<h2 class="main_block__header">Some records</h2>
-			<div class="main_block__content">
+			<h2 class="center main_block__header">Some records</h2>
+			<div class="center main_block__content margin-right">
 				<img src="img/bg.jpg" alt="workspace">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Perferendis totam ab, nostrum, rerum quas velit, deserunt sunt dicta inventore neque, reiciendis? Dignissimos adipisci delectus quidem quia numquam cum neque impedit.</p>
 			</div>
-			<div class="main_block__content">
+			<div class="center main_block__content margin-right">
 				<img src="img/bg.jpg" alt="workspace">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Perferendis totam ab, nostrum, rerum quas velit, deserunt sunt dicta inventore neque, reiciendis? Dignissimos adipisci delectus quidem quia numquam cum neque impedit.</p>
-			</div>	
-			<div class="main_block__content">
+			</div>
+			<div class="center main_block__content">
 				<img src="img/bg.jpg" alt="workspace">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Perferendis totam ab, nostrum, rerum quas velit, deserunt sunt dicta inventore neque, reiciendis? Dignissimos adipisci delectus quidem quia numquam cum neque impedit.</p>
-			</div>		
+			</div>
 		</div>
 	</section>
 
