--- a/Prog/FRONT-END Start/Lesson_7/index.html
+++ b/Prog/FRONT-END Start/Lesson_7/index.html
@@ -5,34 +5,40 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
     <title>Template structure</title>
 </head>
 <body>
         <header class="header">
-            <div class="container">
-                <nav class="menu">
-                    <div class="menu_left_element">
-                        <span>MoGo</span>
-                    </div>
-                    <div class="menu_right_element">
-                        <div class="menu_right_element_items">
-                            <div class="menu_right_element_item">About</div>
-                            <div class="menu_right_element_item">Service</div>
-                            <div class="menu_right_element_item">Work</div>
-                            <div class="menu_right_element_item">Blog</div>
-                            <div class="menu_right_element_item">Contact</div>
+            <div class="overlay">
+                <div class="container">
+                    <nav class="menu">
+                        <div class="menu_elements menu_left_element">
+                            MoGo
                         </div>
-                        <div class="menu_right_element_icons">
-                            <img src="#" alt="">
-                            <img src="#" alt="">
+                        <div class="menu_elements menu_right_element">
+                            <div class="menu_right_element_items">
+                                <div class="menu_right_element_item">About</div>
+                                <div class="menu_right_element_item">Service</div>
+                                <div class="menu_right_element_item">Work</div>
+                                <div class="menu_right_element_item">Blog</div>
+                                <div class="menu_right_element_item">Contact</div>
+                                <div class="menu_right_element_item"><img src="img/search.jpg" alt=""></div>
+                                <div class="menu_right_element_item"><img src="img/shop.jpg" alt=""></div>
+                            </div>
                         </div>
-                    </div>
-                </nav>
-                <section class="header_title">
-                    <h2>Creative Template</h2>
-                    <h1>Welcome to mogo</h1>
-                    <button class="learn_more">Learn more</button>
-                </section>
+                    </nav>
+                    <section class="header_title">
+                        <div class="header_title_block">
+                                <h1>Creative Template</h1>
+                                <div>
+                                    <span>Welcome</span>
+                                    <span>to mogo</span>
+                                </div>
+                                <button class="learn_more">Learn more</button>
+                        </div>
+                    </section>
+                </div>
             </div>
         </header>
         <section class="about_us">
