--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -10,7 +10,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css"> -->
+	 <!--<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">-->
 
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -130,36 +130,50 @@
         </div>
         <div class="container">
             <div class="service_block">
-                <div class="service_block_content">
-                    <h5 class="service_block_content__header">photography</h5>
-                    <p class="service_block_content__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="service_block_content_top">
+                    <h5 class="service_block_content_top__header">photography</h5>
+                    <p class="service_block_content_top__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="service_block_content">
-                    <h5 class="service_block_content__header">photography</h5>
-                    <p class="service_block_content__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="service_block_content_top">
+                    <h5 class="service_block_content_top__header">photography</h5>
+                    <p class="service_block_content_top__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="service_block_content">
-                    <h5 class="service_block_content__header">photography</h5>
-                    <p class="service_block_content__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="service_block_content_top">
+                    <h5 class="service_block_content_top__header">photography</h5>
+                    <p class="service_block_content_top__desc">Dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
             <hr class="service_block_line">
             <div class="service_block">
-                <div class="service_block_content">
-                    <h5 class="service_block_content__header">photography</h5>
-                    <p class="service_block_content__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="service_block_content_bottom">
+                    <h5 class="service_block_content_bottom__header">photography</h5>
+                    <p class="service_block_content_bottom__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="service_block_content">
-                    <h5 class="service_block_content__header">photography</h5>
-                    <p class="service_block_content__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="service_block_content_bottom">
+                    <h5 class="service_block_content_bottom__header">photography</h5>
+                    <p class="service_block_content_bottom__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, consectetur adipiscing elit, consectetur adipiscing elit.</p>
                 </div>
-                <div class="service_block_content">
-                    <h5 class="service_block_content__header">photography</h5>
-                    <p class="service_block_content__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="service_block_content_bottom">
+                    <h5 class="service_block_content_bottom__header">photography</h5>
+                    <p class="service_block_content_bottom__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
         </div>
     </section>
+    <section class="features">
+        <div class="features_images">
+            <div class="section_header">
+                <h3 class="section_header__title">For all devices</h3>
+                <h4 class="section_header__about">unique design</h4>
+                <hr class="section_header__line">
+            </div>
+            <img src="img/laptop.jpg" alt="i-pad" class="features_images_laptop">
+        </div>
+            <img src="img/phone.jpg" alt="i-phone" class="features_images_phone">
+    </section>
+
+    <br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<!-- <script src="libs/jquery/jquery-1.11.2.min.js"></script>
 	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
