--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -65,11 +65,16 @@
 		</div>
 	</section>
 	<section class="about_s">
-            <div class="section_header">
-                <h3 class="section_header__title">What we do</h3>
-                <h4 class="section_header__about">story about us</h4>
-                <hr class="section_header__line">
-                <p class="section_header__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eleifend lectus sed eros imperdiet vulputate. Fusce egestas commodo eros, eu accumsan massa mattis sit amet. Curabitur ipsum elit, accumsan eu venenatis id, euismod in ipsum.</p>
+        <div class="section_header">
+            <h3 class="section_header__title">What we do</h3>
+            <h4 class="section_header__about">story about us</h4>
+            <hr class="section_header__line">
+            <p class="section_header__desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Proin eleifend lectus sed eros imperdiet vulputate.
+                Fusce egestas commodo eros, eu accumsan massa mattis sit amet.
+                Curabitur ipsum elit, accumsan eu venenatis id, euismod in ipsum.
+            </p>
         </div>
 		<div class="flex_container space_between">
 			<div class="about_item">
@@ -132,30 +137,43 @@
             <div class="service_block">
                 <div class="service_block_content_top">
                     <h5 class="service_block_content_top__header">photography</h5>
-                    <p class="service_block_content_top__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="service_block_content_top__desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
                 </div>
                 <div class="service_block_content_top">
                     <h5 class="service_block_content_top__header">photography</h5>
-                    <p class="service_block_content_top__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="service_block_content_top__desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
                 </div>
                 <div class="service_block_content_top">
                     <h5 class="service_block_content_top__header">photography</h5>
-                    <p class="service_block_content_top__desc">Dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="service_block_content_top__desc">
+                        Dolor sit amet, consectetur adipiscing elit.
+                    </p>
                 </div>
             </div>
             <hr class="service_block_line">
             <div class="service_block">
                 <div class="service_block_content_bottom">
                     <h5 class="service_block_content_bottom__header">photography</h5>
-                    <p class="service_block_content_bottom__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="service_block_content_bottom__desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
                 </div>
                 <div class="service_block_content_bottom">
                     <h5 class="service_block_content_bottom__header">photography</h5>
-                    <p class="service_block_content_bottom__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, consectetur adipiscing elit, consectetur adipiscing elit.</p>
+                    <p class="service_block_content_bottom__desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        consectetur adipiscing elit, consectetur adipiscing elit.
+                    </p>
                 </div>
                 <div class="service_block_content_bottom">
                     <h5 class="service_block_content_bottom__header">photography</h5>
-                    <p class="service_block_content_bottom__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="service_block_content_bottom__desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
                 </div>
             </div>
         </div>
@@ -167,9 +185,52 @@
                 <h4 class="section_header__about">unique design</h4>
                 <hr class="section_header__line">
             </div>
-            <img src="img/laptop.jpg" alt="i-pad" class="features_images_laptop">
+            <img src="img/laptop.png" alt="i-pad" class="features_images_laptop">
         </div>
-            <img src="img/phone.jpg" alt="i-phone" class="features_images_phone">
+        <img src="img/phone.png" alt="i-phone" class="features_images_phone">
+    </section>
+    <section class="service2">
+        <div class="section_header">
+            <h3 class="section_header__title">Service</h3>
+            <h4 class="section_header__about">what we do</h4>
+            <hr class="section_header__line">
+            <p class="section_header__desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Proin eleifend lectus sed eros imperdiet vulputate.
+                Fusce egestas commodo eros, eu accumsan massa mattis sit amet.
+                Curabitur ipsum elit, accumsan eu venenatis id, euismod in ipsum.
+            </p>
+        </div>
+        <div class="container">
+            <div class="service2_content">
+                <div class="service2_content__image"></div>
+                <div class="service2_content__services">
+                    <div class="service2_content__service__top_block">
+                        <div class="service2_content__services__name">
+                            <div class="service2_content__services__name__title">photography</div>
+                            <div class="service2_content__services__name__show_more"></div>
+                        </div>
+                        <p class="service2_content__services__desc">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                            culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                    <div class="service2_content__services__name">
+                        <h5 class="service2_content__services__name__title">creativity</h5>
+                        <div class="service2_content__services__name__show_more"></div>
+                    </div>
+                    <div class="service2_content__services__name">
+                        <h5 class="service2_content__services__name__title">web design</h5>
+                        <div class="service2_content__services__name__show_more"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <br><br><br><br><br>
