--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -207,8 +207,8 @@
                 <div class="service2_content__services">
                     <div class="service2_content__service__top_block">
                         <div class="service2_content__services__name">
-                            <div class="service2_content__services__name__title">photography</div>
-                            <div class="service2_content__services__name__show_more"></div>
+                            <h5 class="service2_content__services__name__title">photography</h5>
+                            <a href="#" class="service2_content__services__name__show_more"><img src="img/down-arrow.svg" alt="arrow"></a>
                         </div>
                         <p class="service2_content__services__desc">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -218,18 +218,38 @@
                             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                             culpa qui officia deserunt mollit anim id est laborum.
+
                         </p>
                     </div>
                     <div class="service2_content__services__name">
                         <h5 class="service2_content__services__name__title">creativity</h5>
-                        <div class="service2_content__services__name__show_more"></div>
+                        <a href="#" class="service2_content__services__name__show_more service2_content__services__name__show_more--up"><img src="img/down-arrow.svg" alt="arrow"></a>
                     </div>
                     <div class="service2_content__services__name">
                         <h5 class="service2_content__services__name__title">web design</h5>
-                        <div class="service2_content__services__name__show_more"></div>
+                        <a href="#" class="service2_content__services__name__show_more service2_content__services__name__show_more--up"><img src="img/down-arrow.svg" alt="arrow"></a>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="quote_s">
+        <div class="container">
+            <a href="#" class="service2_content__services__name__show_more service2_content__services__name__show_more--left"><img class="quote_s_nav_img" src="img/down-arrow.svg" alt="arrow"></a>
+            <div class="quote_s_content">
+                <img src="img/quote1.png" alt="speech" class="quote_s_content__img">
+                <div class="quote_s_content__text">
+                    <p class="quote_s_content__text__main_text">
+                        "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Ab aliquam amet non totam ut. Amet debitis dolores enim iure magnam molestiae
+                        nisi quidem, quisquam quo, repellendus unde."</p>
+                    <div class="quote_s_content__text_name">
+                        <hr class="quote_s_content__line">
+                        <h3 class="quote_s_content__author">John Doe</h3>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="service2_content__services__name__show_more service2_content__services__name__show_more--right"><img class="quote_s_nav_img" src="img/down-arrow.svg" alt="arrow"></a>
         </div>
     </section>
 
