--- a/Prog/FRONT-END Start/Lesson_7/index.html
+++ b/Prog/FRONT-END Start/Lesson_7/index.html
@@ -5,42 +5,45 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/media.css"> -->
     <title>Template structure</title>
 </head>
 <body>
-        <header class="header">
-            <div class="overlay">
-                <div class="container">
-                    <nav class="menu">
-                        <div class="menu_elements menu_left_element">
-                            MoGo
-                        </div>
-                        <div class="menu_elements menu_right_element">
-                            <div class="menu_right_element_items">
-                                <div class="menu_right_element_item">About</div>
-                                <div class="menu_right_element_item">Service</div>
-                                <div class="menu_right_element_item">Work</div>
-                                <div class="menu_right_element_item">Blog</div>
-                                <div class="menu_right_element_item">Contact</div>
-                                <div class="menu_right_element_item"><img src="img/search.jpg" alt=""></div>
-                                <div class="menu_right_element_item"><img src="img/shop.jpg" alt=""></div>
-                            </div>
-                        </div>
-                    </nav>
-                    <section class="header_title">
-                        <div class="header_title_block">
-                                <h1>Creative Template</h1>
-                                <div>
-                                    <span>Welcome</span>
-                                    <span>to mogo</span>
-                                </div>
-                                <button class="learn_more">Learn more</button>
-                        </div>
-                    </section>
-                </div>
+        <header>
+            <div class="container">
+                <a href="#" class="header_nav_logo">
+                        <img class="header_nav_logo__img" src="img/logo.png" alt="Logo">
+                </a>                   
+                <nav class="header_nav">
+                    <div class="header_nav_element">
+                        <a href="google.com" class="header_nav__element_link">Link</a>
+                    </div>
+                    <div class="header_nav_element">                        <a href="google.com" class="header_nav__element_link">Link</a>
+                     </div>
+                    <div class="header_nav_element">
+                        <a href="google.com" class="header_nav__element_link">Link</a>
+                    </div>
+                    <div class="header_nav_element">
+                        <a href="google.com" class="header_nav__element_link">Link</a>
+                    </div>
+                    <div class="header_nav_element">
+                        <a href="google.com" class="header_nav__element_link">Link</a>
+                    </div>
+                    <img class="header_nav_element" src="img/h_nav_img.png" alt="fb">
+                    <img class="header_nav_element" src="img/h_nav_img.png" alt="fb">
+                </nav>
             </div>
         </header>
+        <section class="start_s">
+            <div class="s_title_block">
+                <p class="s_title_block__descr">Creative Template</p>
+                <h1 class="s_title_block__title">welcome to mogo</h1>
+                <hr class="s_title_block_line">
+                <button class="my_btn">learn more</button>
+            </div>
+        </section>
         <section class="about_us">
             <div class="container">
                 <div class="section_title">
