MOGO tamplate - started work under our work section

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
 	<header>
 		<div class="container">
 			<a href="#" class="header_logo">
@@ -185,9 +184,13 @@
                 <h4 class="section_header__about">unique design</h4>
                 <hr class="section_header__line">
             </div>
-            <img src="img/laptop.png" alt="i-pad" class="features_images_laptop">
+            <div class="container">
+                <img src="img/laptop.png" alt="i-pad" class="features_images_laptop">
+            </div>
         </div>
-        	<img src="img/phone.png" alt="i-phone" class="features_images_phone">
+        <div class="container">
+            <img src="img/phone.png" alt="i-phone" class="features_images_phone">
+        </div>
     </section>
     <section class="service2">
         <div class="section_header">
@@ -293,7 +296,7 @@
 	        				</a>
 	        			</div>
         			</div>
-        			<img src="img/laptop.png" alt="member of our team" class="meet_team_s_member_photo">
+        			<img src="img/member.png" alt="member of our team" class="meet_team_s_member_photo">
         		</div>
         		<h5 class="meet_team_s_member_name">christofer campbell</h5>
         		<br>
@@ -323,7 +326,7 @@
 	        				</a>
 	        			</div>
         			</div>
-        			<img src="img/laptop.png" alt="member of our team" class="meet_team_s_member_photo">
+        			<img src="img/member.png" alt="member of our team" class="meet_team_s_member_photo">
         		</div>
         		<h5 class="meet_team_s_member_name">christofer campbell</h5>
         		<br>
@@ -353,12 +356,113 @@
 	        				</a>
 	        			</div>
         			</div>
-        			<img src="img/laptop.png" alt="member of our team" class="meet_team_s_member_photo">
+        			<img src="img/member.png" alt="member of our team" class="meet_team_s_member_photo">
         		</div>
         		<h5 class="meet_team_s_member_name">christofer campbell</h5>
         		<br>
         		<h6 class="meet_team_s_member_position">Branding/UX design</h6>
         	</div>
+        </div>
+    </section>
+    <section class="logo_s">
+        <img src="img/logos.png" alt="logos" class="logo_s_img">
+    </section>
+    <section class="our_work_s">
+        <div class="section_header">
+            <h3 class="section_header__title">What we do</h3>
+            <h4 class="section_header__about">some of our work</h4>
+            <hr class="section_header__line">
+            <p class="section_header__desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Proin eleifend lectus sed eros imperdiet vulputate.
+                Fusce egestas commodo eros, eu accumsan massa mattis sit amet.
+                Curabitur ipsum elit, accumsan eu venenatis id, euismod in ipsum.
+            </p>
+        </div>
+        <div class="our_work_s__content">
+            <div class="our_work_s_content__block_4">
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="our_work_s_content__block_vertical">
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="our_work_s_content__block_2">
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="our_work_s_content__block__img">
+                    <div class="block_overlay">
+                        <div class="block_overlay_image">
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <h5 class="block_overlay_title">creatively designed</h5>
+                            <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
