Added images to our work section

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -391,6 +391,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -402,6 +403,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -413,6 +415,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -424,6 +427,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
             </div>
             <div class="our_work_s_content__block_vertical">
@@ -437,6 +441,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/vertical_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
             </div>
             <div class="our_work_s_content__block_2">
@@ -450,6 +455,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -461,6 +467,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
                 </div>
             </div>
         </div>
