--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -11,6 +11,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<script src="https://use.fontawesome.com/d7edf3987a.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.js"
+            integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+            crossorigin="anonymous"></script>
+    <!--<script src="js/resize.js"></script>-->
 
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -391,7 +395,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
-                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main img_resize">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -403,7 +407,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
-                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main img_resize">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -415,7 +419,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
-                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main img_resize">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -427,7 +431,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
-                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main img_resize">
                 </div>
             </div>
             <div class="our_work_s_content__block_vertical">
@@ -455,7 +459,7 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
-                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main img_resize">
                 </div>
                 <div class="our_work_s_content__block__img">
                     <div class="block_overlay">
@@ -467,8 +471,31 @@
                             <h6 class="block_overlay_desc">Lorem ipsum dolor sit</h6>
                         </div>
                     </div>
-                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main">
+                    <img src="img/our_work.png" alt="our work" class="our_work_s_content__block__img_main img_resize">
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="quote_s">
+        <div class="flex_container">
+            <div class="quote_s_nav">
+                <a href="#" class="quote_s_nav_arrow"><img class="quote_s_nav_img quote_s_nav_img--left" src="img/down-arrow.svg" alt="arrow"></a>
+            </div>
+            <div class="quote_s_content">
+                <img src="img/quote2.png" alt="speech" class="quote_s_content__img round_img">
+                <div class="quote_s_content__text">
+                    <p class="quote_s_content__text__main_text">
+                        "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Ab aliquam amet non totam ut. Amet debitis dolores enim iure magnam molestiae
+                        nisi quidem, quisquam quo, repellendus unde."</p>
+                    <div class="quote_s_content__text_name">
+                        <hr class="quote_s_content__line">
+                        <h3 class="quote_s_content__author">John Doe</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="quote_s_nav">
+                <a href="#" class="quote_s_nav_arrow"><img class="quote_s_nav_img quote_s_nav_img--right" src="img/down-arrow.svg" alt="arrow"></a>
             </div>
         </div>
     </section>
