section happy clients WIP

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -499,6 +499,9 @@
             </div>
         </div>
     </section>
+    <section class="client_s">
+
+    </section>
 
     <br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
