section what our clients say is done

--- a/Prog/FRONT-END Start/Lesson_8/site/index.html
+++ b/Prog/FRONT-END Start/Lesson_8/site/index.html
@@ -500,7 +500,99 @@
         </div>
     </section>
     <section class="client_s">
-
+            <div class="client_s_section">
+                <div class="section_header">
+                    <h3 class="section_header__title">What we do</h3>
+                    <h4 class="section_header__about">some of our work</h4>
+                    <hr class="section_header__line">
+                </div>
+                <div class="flex_container space_between">
+                    <div class="client_s_container">
+                        <div class="client_s_block">
+                            <div class="client_s_block_photo">
+                                <img src="img/client.png" alt="client" class="client_s_block_img round_img">
+                            </div>
+                            <div class="client_s_block_text">
+                                <h5 class="client_s_block_text_title">
+                                    Metthew Dix
+                                </h5>
+                                <h6 class="client_s_block_text_position">
+                                    Graphic Designer
+                                </h6>
+                                <hr class="client_s_block_text_line">
+                                <p class="client_s_block_text_desc">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Autem dolore eligendi eveniet excepturi expedita
+                                    libero nemo omnis optio qui,
+                                    ratione sapiente veniam voluptas?
+                                </p>
+                            </div>
+                        </div>
+                        <div class="client_s_block">
+                            <div class="client_s_block_photo">
+                                <img src="img/client.png" alt="client" class="client_s_block_img round_img">
+                            </div>
+                            <div class="client_s_block_text">
+                                <h5 class="client_s_block_text_title">
+                                    Metthew Dix
+                                </h5>
+                                <h6 class="client_s_block_text_position">
+                                    Graphic Designer
+                                </h6>
+                                <hr class="client_s_block_text_line">
+                                <p class="client_s_block_text_desc">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Autem dolore eligendi eveniet excepturi expedita
+                                    libero nemo omnis optio qui,
+                                    ratione sapiente veniam voluptas?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="client_s_container">
+                        <div class="client_s_block">
+                            <div class="client_s_block_photo">
+                                <img src="img/client.png" alt="client" class="client_s_block_img round_img">
+                            </div>
+                            <div class="client_s_block_text">
+                                <h5 class="client_s_block_text_title">
+                                    Metthew Dix
+                                </h5>
+                                <h6 class="client_s_block_text_position">
+                                    Graphic Designer
+                                </h6>
+                                <hr class="client_s_block_text_line">
+                                <p class="client_s_block_text_desc">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Autem dolore eligendi eveniet excepturi expedita
+                                    libero nemo omnis optio qui,
+                                    ratione sapiente veniam voluptas?
+                                </p>
+                            </div>
+                        </div>
+                        <div class="client_s_block">
+                            <div class="client_s_block_photo">
+                                <img src="img/client.png" alt="client" class="client_s_block_img round_img">
+                            </div>
+                            <div class="client_s_block_text">
+                                <h5 class="client_s_block_text_title">
+                                    Metthew Dix
+                                </h5>
+                                <h6 class="client_s_block_text_position">
+                                    Graphic Designer
+                                </h6>
+                                <hr class="client_s_block_text_line">
+                                <p class="client_s_block_text_desc">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Autem dolore eligendi eveniet excepturi expedita
+                                    libero nemo omnis optio qui,
+                                    ratione sapiente veniam voluptas?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <br><br><br><br><br>
